# pfm-financial-system

./: .env.example  .gitignore  pyproject.toml  readme.txt  requirements.txt
.github/workflows/: deploy.yml
cloud_finance_lib/: __init__.py  services.py
docs/: architecture.md  project_brief_alignment.md
finance/: forms.py  models.py  tests.py  urls.py  views.py
finance/migrations/: 0001_initial.py  0002_alter_transaction_currency.py  0003_alter_budget_currency_alter_transaction_currency.py
finance/templates/finance/: add_transaction.html  dashboard.html  delete_confirm.html  home.html  register.html
finance/templates/registration/: login.html
finance_utils/: calculations.py
pfm/: asgi.py  settings.py  urls.py  wsgi.py
