[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-finance-lib"
version = "0.1.0"
description = "Reusable cloud service integrations for the PFM application."
readme = "readme.txt"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.72",
]

[tool.setuptools]
packages = ["cloud_finance_lib"]
